--- a/TravelCardOrderService/appsettings.json
+++ b/TravelCardOrderService/appsettings.json
@@ -7,5 +7,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "LIQPAY_PUBLIC_KEY": "",
+  "LIQPAY_PRIVATE_KEY": "",
+  "Gmail": ""
 }
